--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "logseq-plugin-markdown-table",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
+  "description": "markdown table editor for logseq",
+  "main": "build/index.html",
+  "homepage": "./",
+  "logseq": {
+    "id": "hayden_markdown_table",
+    "icon": "./logo.png"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@craco/craco": "^6.3.0",
+    "@logseq/libs": "0.0.1-alpha.26",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -43,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.3"
   }
 }
