--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
     ]
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/exec": "^6.0.1",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/npm": "^8.0.2",
     "babel-plugin-import": "^1.13.3"
   }
 }
