--- a/.releaserc
+++ b/.releaserc
@@ -11,7 +11,7 @@
     [
       "@semantic-release/git",
       {
-        "assets": ["build/**"],
+        "assets": ["CHANGELOG.md", "package.json"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
