--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@ant-design/icons": "^4.7.0",
     "@babel/core": "7.12.3",
     "@craco/craco": "^6.3.0",
-    "@logseq/libs": "0.0.1-alpha.26",
+    "@logseq/libs": "^0.0.15",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "@tailwindcss/postcss7-compat": "^2.2.17",
@@ -53,6 +53,7 @@
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
+    "i18next": "^23.4.6",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
@@ -74,6 +75,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
+    "react-i18next": "^13.2.2",
     "react-refresh": "^0.8.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
